--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ plugins {
 group 'com.jetbrains.bogomolov'
 version '1.0'
 
-compileKotlin  {
+apply plugin: 'kotlin'
+
+compileKotlin {
     kotlinOptions.jvmTarget = javaVersion
 }
 compileTestKotlin {
@@ -31,9 +33,15 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+    jcenter()
 }
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    compile "org.deeplearning4j:deeplearning4j-core:${dl4jVersion}"
+    compile "org.nd4j:nd4j-native-platform:${dl4jVersion}"
+    compile "org.slf4j:slf4j-simple:1.7.25"
+    compile "org.slf4j:slf4j-api:1.7.25"
+    implementation 'com.beust:klaxon:3.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
