--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ compileTestKotlin {
 }
 intellij {
     version ideaVersion
-    plugins 'python'
+    plugins 'python-ce'
 }
 patchPluginXml {
     changeNotes """
@@ -42,6 +42,6 @@ dependencies {
     compile "org.nd4j:nd4j-native-platform:${dl4jVersion}"
     compile "org.slf4j:slf4j-simple:1.7.25"
     compile "org.slf4j:slf4j-api:1.7.25"
-    implementation 'com.beust:klaxon:3.0.1'
+    compile 'com.beust:klaxon:3.0.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
