--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
-ideaVersion = 2018.1
+ideaVersion = 2018.2.4
 javaVersion = 1.8
 kotlinVersion = 1.2.51
-dl4jVersion = 1.0.0-beta
+dl4jVersion = 1.0.0-alpha
 serializationVersion = 0.6.1
