Fix 'Cannot find builtin plugin python-ce for IDE' error

--- a/build.gradle
+++ b/build.gradle
@@ -19,7 +19,7 @@ compileTestKotlin {
 
 intellij {
     version ideaVersion
-    plugins 'python-ce'
+    plugins 'PythonCore:2018.2.182.4505.22'
 }
 
 patchPluginXml {
