Switch from DL4J to TensorFlow

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 ideaVersion = 2018.2.4
 javaVersion = 1.8
 kotlinVersion = 1.2.51
-dl4jVersion = 1.0.0-alpha
+tfVersion = 1.11.0
 serializationVersion = 0.6.1
