--- a/build.gradle
+++ b/build.gradle
@@ -51,10 +51,9 @@ repositories {
 
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
-    compile "org.deeplearning4j:deeplearning4j-core:${dl4jVersion}"
-    compile "org.nd4j:nd4j-native-platform:${dl4jVersion}"
+    compile "org.tensorflow:tensorflow:${tfVersion}"
     compile "org.slf4j:slf4j-simple:1.7.25"
     compile "org.slf4j:slf4j-api:1.7.25"
-    compile 'com.beust:klaxon:3.0.1'
+    compile "com.beust:klaxon:3.0.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
