--- a/build.gradle
+++ b/build.gradle
@@ -28,15 +28,15 @@ patchPluginXml {
                 """
 }
 
-prepareSandbox {
-    from("${projectDir}/models") {
-        exclude "tokenToVector.zip"
-        into "${pluginName}/models"
-    }
-    from(zipTree("${projectDir}/models/tokenToVector.zip")) {
-        into "${pluginName}/models"
-    }
-}
+//prepareSandbox {
+ //   from("${projectDir}/models") {
+  //      exclude "tokenToVector.zip"
+  //      into "${pluginName}/models"
+  //  }
+    //from(zipTree("${projectDir}/models/tokenToVector.zip")) {
+        //into "${pluginName}/models"
+    //}
+//}
 
 runIde {
     jvmArgs '-Xms1024m', '-Xmx10g'
@@ -54,6 +54,7 @@ dependencies {
     compile "org.tensorflow:tensorflow:${tfVersion}"
     compile "org.slf4j:slf4j-simple:1.7.25"
     compile "org.slf4j:slf4j-api:1.7.25"
+    compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
     compile "com.beust:klaxon:3.0.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
