--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ plugins {
     id 'org.jetbrains.kotlin.jvm' version '1.2.51'
 }
 
-group 'com.jetbrains.deepbugs'
-version '1.0'
+group 'org.jetbrains.research.groups.ml_methods.deepbugs'
+version '0.1'
 
 apply plugin: 'kotlin'
 
@@ -19,7 +19,7 @@ compileTestKotlin {
 
 intellij {
     version ideaVersion
-    pluginName 'DeepBugs'
+    pluginName 'DeepBugsPlugin'
     plugins 'PythonCore:2018.2.182.4505.22'
 }
 
@@ -41,5 +41,7 @@ dependencies {
     compile "org.slf4j:slf4j-api:1.7.25"
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
     compile "com.beust:klaxon:3.0.1"
+    compile group: 'org.eclipse.mylyn.github', name: 'org.eclipse.egit.github.core', version: '2.1.5'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
