Remove models from distribution

--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ group 'org.jetbrains.research.groups.ml_methods.deepbugs'
 version '0.1'
 
 apply plugin: 'kotlin'
+apply plugin: 'distribution'
 
 compileKotlin {
     kotlinOptions.jvmTarget = javaVersion
@@ -30,6 +31,11 @@ runIde {
 patchPluginXml {
     sinceBuild '171'
     untilBuild ''
+}
+
+buildPlugin{
+    exclude('models')
+    exclude('repository.json')
 }
 
 sourceCompatibility = 1.8
