--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -67,9 +67,9 @@
 
         <!--Action for throwing an exception just to test the reporting of errors into the GitHub database, uncomment if needed-->
 
-       <!-- <action id="org.jetbrains.research.groups.ml_methods.deepbugs.error_reporting.TriggerExceptionAction"
+        <action id="org.jetbrains.research.groups.ml_methods.deepbugs.error_reporting.TriggerExceptionAction"
                 class="org.jetbrains.research.groups.ml_methods.deepbugs.error_reporting.TriggerExceptionAction" text="FireArtificialException">
             <add-to-group group-id="ToolsMenu" anchor="first"/>
-        </action>-->
+        </action>
     </actions>
 </idea-plugin>
