Add internet connection error notification

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -9,3 +9,6 @@ git.issue.duplicate.text = <a href="{0}">A similar issues was already reported (
 threshold.label = Threshold, %
 set.default = Default
 binary.operator.inspection.warning = Possibly incorrect binary operator(Probability: {0})
+notification.group.id = "DeepBugs Error"
+notification.title = "DeepBugsPlugin"
+notification.message = "Could not connect to server. Please, check your Internet connection and re-enable the plugin"
