--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -6,9 +6,11 @@ git.issue.text = <a href="{0}">Created issue {1}</a>. Thank you for your feedbac
             	  Make sure you have the latest plugin version.
 git.issue.duplicate.text = <a href="{0}">A similar issues was already reported (#{1})</a>. \n \
                             Thank you for your feedback! Make sure you have the latest plugin version.
-threshold.label = Threshold, %
+bin.operator.threshold.label = Incorrect binary operator inspection threshold, %
+bin.operand.threshold.label = Incorrect binary operand inspection threshold, %
 set.default = Default
 binary.operator.inspection.warning = Possibly incorrect binary operator(Probability: {0})
+binary.operand.inspection.warning = Possibly incorrect binary operand(Probability: {0})
 notification.group.id = "DeepBugs Error"
 notification.title = "DeepBugsPlugin"
 notification.message = "Could not connect to server. Please, check your Internet connection and re-enable the plugin"
