Change error notification message

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -13,4 +13,4 @@ binary.operator.inspection.warning = Possibly incorrect binary operator(Probabil
 binary.operand.inspection.warning = Possibly incorrect binary operand(Probability: {0})
 notification.group.id = "DeepBugs Error"
 notification.title = "DeepBugsPlugin"
-notification.message = "Could not connect to server. Please, check your Internet connection and re-enable the plugin"
+notification.message = "Could not connect to server. Please, check your Internet connection and restart the IDE"
