Add progress bar for downloading task

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -11,6 +11,6 @@ bin.operand.threshold.label = Incorrect binary operand inspection threshold, %
 set.default = Default
 binary.operator.inspection.warning = Possibly incorrect binary operator(Probability: {0})
 binary.operand.inspection.warning = Possibly incorrect binary operand(Probability: {0})
-notification.group.id = "DeepBugs Error"
-notification.title = "DeepBugsPlugin"
-notification.message = "Could not connect to server. Please, check your Internet connection and restart the IDE"
+notification.group.id = DeepBugs Error
+notification.title = DeepBugsPlugin
+notification.message = Fail to load models. Please, check your Internet connection and restart the IDE
