--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     compile "org.tensorflow:tensorflow:${tfVersion}"
-    compile 'org.slf4j:slf4j-log4j12:1.7.7'
+    compile "org.apache.logging.log4j:log4j-core:2.8.2"
     compile "com.fasterxml.jackson.module:jackson-module-kotlin:2.9.+"
     compile "com.beust:klaxon:3.0.1"
     compile group: 'org.eclipse.mylyn.github', name: 'org.eclipse.egit.github.core', version: '2.1.5'
