--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -8,11 +8,14 @@ git.issue.duplicate.text = <a href="{0}">A similar issues was already reported (
                             Thank you for your feedback! Make sure you have the latest plugin version.
 bin.operator.threshold.label = Incorrect binary operator inspection threshold, %
 bin.operand.threshold.label = Incorrect binary operand inspection threshold, %
+swapped.args.threshold.label = Swapped function arguments inspection threshold, %
 set.default = Default
 binary.operator.inspection.warning = Possibly incorrect binary operator(Probability: {0})
 binary.operand.inspection.warning = Possibly incorrect binary operand(Probability: {0})
+swapped.args.inspection.warning = Possibly swapped function arguments(Probability: {0})
 binary.operator.inspection.display = DeepBugs: Possibly incorrect binary operator
 binary.operand.inspection.display = DeepBugs: Possibly incorrect binary operand
+swapped.args.inspection.display = DeepBugs: Possibly swapped function arguments
 download.task.title = DeepBugs: Download models and embeddings
 notification.group.id = DeepBugs Error
 notification.title = DeepBugsPlugin
