Make download task backgroundable. Code cleanup

--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -19,4 +19,5 @@ swapped.args.inspection.display = DeepBugs: Possibly swapped function arguments
 download.task.title = DeepBugs: Download models and embeddings
 notification.group.id = DeepBugs Error
 notification.title = DeepBugsPlugin
-notification.message = Could not load models. Please, check your Internet connection and restart the IDE.
+error.notification.message = Could not load models. Please, check your Internet connection.
+success.notification.message = Model files are successfully loaded.
