--- a/src/main/resources/DeepBugsPluginBundle.properties
+++ b/src/main/resources/DeepBugsPluginBundle.properties
@@ -1,23 +1,26 @@
-report.error.to.plugin.vendor = Report error to plugin vendor
-report.error.progress.dialog.text = Submitting error report...
-report.error.connection.failure = Could not communicate with GitHub.\n\
+report.error.to.plugin.vendor=Report error to plugin vendor
+report.error.progress.dialog.text=Submitting error report...
+report.error.connection.failure=Could not communicate with GitHub.\n\
                                   Please <a href="{0}">create issue</a>.
-git.issue.text = <a href="{0}">Created issue {1}</a>. Thank you for your feedback! \n \
+git.issue.text=<a href="{0}">Created issue {1}</a>. Thank you for your feedback! \n \
             	  Make sure you have the latest plugin version.
-git.issue.duplicate.text = <a href="{0}">A similar issues was already reported (#{1})</a>. \n \
+git.issue.duplicate.text=<a href="{0}">A similar issues was already reported (#{1})</a>. \n \
                             Thank you for your feedback! Make sure you have the latest plugin version.
-bin.operator.threshold.label = Incorrect binary operator inspection threshold, %
-bin.operand.threshold.label = Incorrect binary operand inspection threshold, %
-swapped.args.threshold.label = Swapped function arguments inspection threshold, %
-set.default = Default
-binary.operator.inspection.warning = Possibly incorrect binary operator(Probability: {0})
-binary.operand.inspection.warning = Possibly incorrect binary operand(Probability: {0})
-swapped.args.inspection.warning = Possibly swapped function arguments(Probability: {0})
-binary.operator.inspection.display = DeepBugs: Possibly incorrect binary operator
-binary.operand.inspection.display = DeepBugs: Possibly incorrect binary operand
-swapped.args.inspection.display = DeepBugs: Possibly swapped function arguments
-download.task.title = DeepBugs: Download models and embeddings
-notification.group.id = DeepBugs Error
-notification.title = DeepBugsPlugin
-error.notification.message = Could not load models. Please, check your Internet connection.
-success.notification.message = Model files are successfully loaded.
+bin.operator.threshold.label=Incorrect binary operator inspection threshold, %
+bin.operand.threshold.label=Incorrect binary operand inspection threshold, %
+swapped.args.threshold.label=Swapped function arguments inspection threshold, %
+set.default=Default
+binary.operator.inspection.warning=Possibly incorrect binary operator(Probability: {0})
+binary.operand.inspection.warning=Possibly incorrect binary operand(Probability: {0})
+swapped.args.inspection.warning=Possibly swapped function arguments(Probability: {0})
+binary.operator.inspection.display=DeepBugs: Possibly incorrect binary operator
+binary.operand.inspection.display=DeepBugs: Possibly incorrect binary operand
+swapped.args.inspection.display=DeepBugs: Possibly swapped function arguments
+download.task.title=DeepBugs: Download models and embeddings
+notification.group.id=DeepBugs Error
+download.notification = Download models
+notification.title=DeepBugsPlugin
+error.notification.message=Could not load models. Please, check your Internet connection.
+success.notification.message=Model files are successfully loaded.
+download.notification.message=Model files are required.\n \
+                              <a href="">Download models</a>
